Added category and brand filter to fetch products